# DigitalBook

./: CMakeLists.txt  TODO
cmake/: FindFreenect.cmake  FindOpenNI.cmake
media/materials/: general.material
src/: BookWidget.cpp  BookWidget.h  CameraThread.cpp  CameraThread.h  DepthAnalyzer.cpp  DepthAnalyzer.h  DepthWidget.cpp  DepthWidget.h  KinectManager.cpp  KinectManager.h  KinectThread.cpp  KinectThread.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  OgreManager.cpp  OgreManager.h  OgreWidget.cpp  OgreWidget.h  Page.cpp  Page.h  VideoWidget.cpp  VideoWidget.h
